--- a/player.css
+++ b/player.css
@@ -50,5 +50,18 @@
 	
 	a.next { background: url('next.png'); }
 	
-	
 
+	#progressBar
+	{ 
+	background-color: #ed8515; 
+	height: 32px; 
+	width: 0%; 
+	margin-top:90px;
+	}
+	
+	#player_play_bar { 
+	background-color: #ed8515; 
+	height: 32px; 
+	width: 0%; 
+	margin-top:90px;
+	}
