Volume control kominn
Hann virkar en er ekki á réttum stað og það er ekkert flott við hann.

--- a/player.css
+++ b/player.css
@@ -48,3 +48,10 @@
 	margin-top:60px;
 	margin-left: 220px;
 	}
+
+	#slider
+	{
+		margin-left: -200px;		
+		margin-bottom: 200px;
+		position:relative;
+	}
