--- a/player.css
+++ b/player.css
@@ -51,7 +51,7 @@
 
 	#slider
 	{
-		margin-left: -200px;		
-		margin-bottom: 200px;
-		position:relative;
+	position:absolute;
+	left:400px;
+	top:25px;
 	}
