--- a/player.css
+++ b/player.css
@@ -1,9 +1,9 @@
 #playerContainer { 
 	background-color: #BF4949;
-	width: 600px; 
+	width: 550px; 
 	height: 90px;
 	padding: 8px;
-	border: 3px solid #d0d0d0;
+	border: 2px solid #d0d0d0;
 	margin-left: auto ;
   	margin-right: auto ;
 }
@@ -39,6 +39,16 @@
 	
 	a.next { background: url('next.png'); }
 	
+	#progressBarContainer
+	{ 
+	
+	width: 250px; 
+	height: 20px;
+	margin-top:-41px;
+	margin-left: 620px;
+	border: 1px solid #d0d0d0;
+	
+	}
 
 	#progressBar
 	{ 
@@ -52,6 +62,13 @@
 	#slider
 	{
 	position:absolute;
-	left:400px;
+	left:425px;
 	top:25px;
+	}
+
+	#time
+	{
+		float:right;
+		margin-top:-40px;
+		margin-right: 80px;
 	}
