--- a/player.css
+++ b/player.css
@@ -39,6 +39,11 @@
 	
 	a.next { background: url('next.png'); }
 	
+	
+
+
+
+
 	#progressBarContainer
 	{ 
 	width: 250px; 
@@ -52,7 +57,7 @@
 	#progressBar
 	{ 
 	background-color: #fff; 
-	height: 22px; 
+	height: 20px; 
 	width: 0%; 
 	margin-top:60px;
 	margin-left: 220px;
@@ -67,9 +72,9 @@
 
 	#time
 	{
-		float:right;
-		margin-top:-40px;
-		margin-right: 80px;
+	float:right;
+	margin-top:-40px;
+	margin-right: 80px;
 	}
 
 	#songInfo
@@ -78,5 +83,14 @@
 	height: 20px;
 	margin-top: -80px;
 	margin-left: 220px;
-	
 	}
+	
+	#mute
+	{
+	background: url('mute.png');
+	width: 40px; 
+	height: 40px;
+	margin-top: 32px;
+	margin-left: 480px;	
+	}
+
