--- a/player.css
+++ b/player.css
@@ -41,10 +41,11 @@
 
 	#progressBarContainer
 	{ 
+	position:absolute;
 	width: 250px; 
 	height: 20px;
-	margin-top:-41px;
-	margin-left: 620px;
+	top: 77px;
+	left: 238px;
 	border: 1px solid #d0d0d0;
 	
 	}
@@ -82,6 +83,7 @@
 	
 	#mute
 	{
+	cursor:pointer;
 	background: url('mute.png');
 	width: 40px; 
 	height: 40px;
